fixed z-index bug

--- a/AC-Control/Client/src/Styles/styles.scss
+++ b/AC-Control/Client/src/Styles/styles.scss
@@ -1616,6 +1616,7 @@ body {
         cursor: pointer;
         transition: all 0.25s ease;
         box-shadow: 0px 0px 13px -5px #474747;
+        z-index: 3;
         
         &.on {
             background: #57ff94;
